--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
-  "name": "custom-snap",
-  "version": "1.0.0",
-  "description": "Allow both scroll snapping and normal scrolling between sections in your website",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Hasan Mothaffar",
-  "license": "MIT"
+	"name": "custom-snap",
+	"version": "1.0.0",
+	"description": "A module that allows having both scroll snapping and normal scrolling between sections in your website",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc -p ./tsconfig.json"
+	},
+	"keywords": [
+		"scroll",
+		"scroll-snap",
+		"js"
+	],
+	"author": "Hasan Mothaffar <hasan.mozafar@gmail.com>",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/HasanMothaffar/custom-snap.git"
+	},
+	"license": "MIT",
+	"files": [
+		"dist/"
+	]
 }
