--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "tsc -p ./tsconfig.json"
+		"build": "tsc -p ./tsconfig.json",
+		"watch": "tsc -p ./tsconfig.json --watch",
+		"lint": "eslint . --ext .ts",
+		"lint:fix": "eslint . --ext .ts --fix"
 	},
 	"keywords": [
 		"scroll",
@@ -21,5 +24,10 @@
 	"license": "MIT",
 	"files": [
 		"dist/"
-	]
+	],
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"@typescript-eslint/parser": "^5.18.0",
+		"eslint": "^8.12.0"
+	}
 }
