--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc -p ./tsconfig.json",
+		"docs": "webpack",
 		"watch": "tsc -p ./tsconfig.json --watch",
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint . --ext .ts --fix"
@@ -29,6 +30,8 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.18.0",
 		"@typescript-eslint/parser": "^5.18.0",
-		"eslint": "^8.12.0"
+		"eslint": "^8.12.0",
+		"html-webpack-plugin": "^5.5.0",
+		"webpack-cli": "^4.9.2"
 	}
 }
